<resources>
    <string name="app_name">FridYI</string>
    <string name="nav_home">Home</string>
    <string name="nav_storage">Storage</string>
    <string name="nav_list">List</string>
    <string name="nav_add">Add</string>
    <string name="nav_profile">Profile</string>
    <string name="start_view">Start View</string>
    <string name="get_started">Get Started</string>
    <string name="link_google">Link Google Account</string>
    <string name="help">Help</string>
    <string name="food_storage_view">Food Storage View</string>
    <string name="search_food_storage">Search for food storage unit…</string>
    <string name="food_item_list_view">Food Item List View</string>
    <string name="search_food_item">Search for food item…</string>
    <string name="food_item_input_view">Food Item Input View</string>
    <string name="food_item_input_options">Food Item Input Options</string>
    <string name="simple_scan">Simple scan</string>
    <string name="bar_scan">Bar scan</string>
    <string name="manual_input">Manual input</string>
    <string name="add_food_item">Add Food Item</string>
    <string name="expiring_soon">Expiring Soon</string>
    <string name="expired">Expired</string>
    <string name="recipe_suggestions_title">Recipes Suggestions for Your Storage</string>
    <string name="click_for_more_details">Click for more details</string>
    <string name="add_storage_type">Add Storage Type</string>
    <string name="storage_name">Storage Name</string>
    <string name="storage_description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete_storage_title">Delete Storage</string>
    <string name="delete_storage_message">Are you sure you want to delete this storage? All items in it will also be deleted.</string>
    <string name="delete">Delete</string>
    <string name="select_icon">Select Icon</string>
    <string name="icon_fridge">Fridge</string>
    <string name="icon_freezer">Freezer</string>
    <string name="icon_crisper">Crisper</string>

    <string-array name="units_array">
        <item>pcs</item>
        <item>kg</item>
        <item>g</item>
        <item>ml</item>
        <item>L</item>
        <item>pack</item>
        <item>bottle</item>
        <item>can</item>
    </string-array>
</resources>